--- a/SharedPreference/src/main/res/values/strings.xml
+++ b/SharedPreference/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">SharedPreferenceCode</string>
     <string name="action_settings">Settings</string>
+    <string name="user_information">User Information</string>
+    <string name="quit">Quit</string>
 </resources>
